@@ -147,6 +147,9 @@ repositories {
 }
 
 test {
+    minHeapSize = "128m" // initial heap size
+    maxHeapSize = "1g" // maximum heap size
+    jvmArgs '-XX:MaxPermSize=1g' // mem argument for the test JVM
     afterTest { desc, result ->
         println "Executing test ${desc.name} [${desc.className}] with result: ${result.resultType}"
     }
